--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,6 +1,33 @@
+@import url('https://fonts.googleapis.com/css?family=Satisfy');
 
 .App {
   max-width: 700px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 70px;
+  font-family: Satisfy;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #41B3A3;
 }
+
+.App__header {
+  font-size: 70px;
+  margin-bottom: 50px;
+  color: white;
+}
+
+.AddCocktail {
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 70px;
+  font-family: Satisfy;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffcc66;
+}
+
+
